Changes since 0.2.8.2:

  New settings and commands:
- "/vote" chat interface to votes; "/vote kick <player>" issues a kick vote.
- new vote type "/vote suspend <player>" suspends a player for 
  VOTING_SUSPEND_ROUNDS rounds.
- VOTING_HARM_TIME: time between all harmful votes against a player
- VOTING_KICK_MINHARM: auto-transform the first few menu issued kick 
  votes to suspensions
- (UN)SUSPEND kicks a player to spectator mode with a timeout. Intended to
  let new players watch before they play.
- VOTES_CANCEL cancels all running polls.
- ZONE_ALPHA_TOGGLE to override the systemwide alpha blendings setting and
  have zones rendered in wireframe mode even when alpha blending is on.
- ZONE_ALPHA(_SERVER) to control intensity of zone rendering.
- SCORE_HOLE for awarding sacrifice.
- SCORE_SURVIVE for player survival and FORTRESS_HELD_SCORE for not losing
  each fortress zone.
- KICK_TO and MOVE_TO: redirect a client to a different server
- DEFAULT_KICK(_TO)_MESSAGE: default reason given to players for a kick
- DEFAULT_KICK_TO_SERVER/PORT: default redirection target for KICK/MOVE_TO.
- If all clients support it, PING_CHARITY_MIN/MAX can be used to constrain ping charity.
- VOTE_KICK_TO_SERVER/PORT: redirection target for vote kicks.
- SILENCE and VOICE allow to control chat of annoying players.
- SILENCE_ALL can be used on the server to inhibit all cross-team communication unless specifically voiced.
- ENABLE_CHAT can be set to 0 to disable all chat. If it is set on the server it only disables public chat and logged in players can still speak.
- LAG_*: controls game level lag compensation.
- FILTER_NAME_MIDDLE: collapses multiple whitespaces to one in player names.
- FORTRESS_CONQEST_TIMEOUT: if an enemy contact with a zone happens longer ago than
  this value, it is discarded from zone memory.
- TOPOLOGY_POLICE_PARALLEL, extra topology police flag to control the checks
  for walls getting copied into the grid in exactly the same place.